--- a/index.html
+++ b/index.html
@@ -22,48 +22,342 @@
             <a href="#">BUDS</a>
             <a href="#">ACC</a>
         </div>
-        <div class="tab1 tab">
-            <div class="big">
-                <a href="#">
-                    <div class="span">
-                        <span>255 보라구마</span><span><del>KRW 25,000</del></span><span>7,000</span>
-                    </div>
-                </a>
-                <!-- <img src="./images/925e00e115701f52726bd4c38edee62c.jpg" alt=""> -->
+        <div class="tab_content">
+            <div class="tab1 tab">
+                <div class="big">
+                    <a href="#">
+                        <div class="span">
+                            <span>255 보라구마</span><span><del>KRW 25,000</del></span><span>7,000</span>
+                        </div>
+                    </a>
+                    <!-- <img src="./images/925e00e115701f52726bd4c38edee62c.jpg" alt=""> -->
+                </div>
+                <div class="thum">
+                    <a href="#">
+                        <div class="span">
+                            <span>[AIR PODS] 226 벌룬파자마</span><span><del>KRW 20,000</del></span><span>KRW 7,000</span>
+                        </div>
+                    </a>
+                    <a href="#">
+                        <div class="span">
+                            <span>[AIR PODS] 248 곰글링</span><span><del>KRW 18,000</del></span><span>KRW 6,000</span>
+                        </div>
+                    </a>
+                    <a href="#">
+                        <div class="span">
+                            <span>#S2 하트톡꽃받으숑</span><span><del>KRW 11,000</del></span><span>KRW 7,000</span>
+                        </div>
+                    </a>
+                    <a href="#">
+                        <div class="span">
+                            <span>KEY RING 228 새곰달곰</span><span><del>KRW 12,000</del></span><span>KRW 5,900</span>
+                        </div>
+                    </a>
+                    <a href="#">
+                        <div class="span">
+                            <span>SMART TOK 선셋베어(크림)</span><span><del>KRW 13,000</del></span><span>KRW 6,000</span>
+                        </div>
+                    </a>
+                    <a href="#">
+                        <div class="span">
+                        <span>서프곰 SET</span><span><del>KRW 18,000</del></span><span>KRW 14,000</span>
+                        </div>
+                    </a>
+                </div>
             </div>
-            <div class="thum">
-                <a href="#"><span>[AIR PODS] 226 벌룬파자마</span><span><del>KRW 20,000</del></span><span>KRW 7,000</span></a>
-                <a href="#"><span>[AIR PODS] 248 곰글링</span><span><del>KRW 18,000</del></span><span>KRW 6,000</span></a>
-                <a href="#"><span>#S2 하트톡꽃받으숑</span><span><del>KRW 11,000</del></span><span>KRW 7,000</span></a>
-                <a href="#"><span>KEY RING 228 새곰달곰</span><span><del>KRW 12,000</del></span><span>KRW 5,900</span></a>
-                <a href="#"><span>SMART TOK 선셋베어(크림)</span><span><del>KRW 13,000</del></span><span>KRW 6,000</span></a>
-                <a href="#"><span>서프곰 SET</span><span><del>KRW 18,000</del></span><span>KRW 14,000</span></a>
+            <div class="tab2 tab">
+                <div class="big">
+                    <a href="#">
+                        <div class="span">
+                            <span>255 보라구마</span><span><del>KRW 25,000</del></span><span>7,000</span>
+                        </div>
+                    </a>
+                    <!-- <img src="./images/925e00e115701f52726bd4c38edee62c.jpg" alt=""> -->
+                </div>
+                <div class="thum">
+                    <a href="#">
+                        <div class="span">
+                            <span>[AIR PODS] 226 벌룬파자마</span><span><del>KRW 20,000</del></span><span>KRW 7,000</span>
+                        </div>
+                    </a>
+                    <a href="#">
+                        <div class="span">
+                            <span>[AIR PODS] 248 곰글링</span><span><del>KRW 18,000</del></span><span>KRW 6,000</span>
+                        </div>
+                    </a>
+                    <a href="#">
+                        <div class="span">
+                            <span>#S2 하트톡꽃받으숑</span><span><del>KRW 11,000</del></span><span>KRW 7,000</span>
+                        </div>
+                    </a>
+                    <a href="#">
+                        <div class="span">
+                            <span>KEY RING 228 새곰달곰</span><span><del>KRW 12,000</del></span><span>KRW 5,900</span>
+                        </div>
+                    </a>
+                    <a href="#">
+                        <div class="span">
+                            <span>SMART TOK 선셋베어(크림)</span><span><del>KRW 13,000</del></span><span>KRW 6,000</span>
+                        </div>
+                    </a>
+                    <a href="#">
+                        <div class="span">
+                        <span>서프곰 SET</span><span><del>KRW 18,000</del></span><span>KRW 14,000</span>
+                        </div>
+                    </a>
+                </div>
             </div>
-        </div>
-        <div class="tab2 tab">
-            <div class="big">
-                <!-- <img src="./images/ba41c0bf2ec0fc09b0758c0d1e20e327.jpg" alt=""> -->
+            <div class="tab3 tab">
+                <div class="big">
+                    <a href="#">
+                        <div class="span">
+                            <span>255 보라구마</span><span><del>KRW 25,000</del></span><span>7,000</span>
+                        </div>
+                    </a>
+                    <!-- <img src="./images/925e00e115701f52726bd4c38edee62c.jpg" alt=""> -->
+                </div>
+                <div class="thum">
+                    <a href="#">
+                        <div class="span">
+                            <span>[AIR PODS] 226 벌룬파자마</span><span><del>KRW 20,000</del></span><span>KRW 7,000</span>
+                        </div>
+                    </a>
+                    <a href="#">
+                        <div class="span">
+                            <span>[AIR PODS] 248 곰글링</span><span><del>KRW 18,000</del></span><span>KRW 6,000</span>
+                        </div>
+                    </a>
+                    <a href="#">
+                        <div class="span">
+                            <span>#S2 하트톡꽃받으숑</span><span><del>KRW 11,000</del></span><span>KRW 7,000</span>
+                        </div>
+                    </a>
+                    <a href="#">
+                        <div class="span">
+                            <span>KEY RING 228 새곰달곰</span><span><del>KRW 12,000</del></span><span>KRW 5,900</span>
+                        </div>
+                    </a>
+                    <a href="#">
+                        <div class="span">
+                            <span>SMART TOK 선셋베어(크림)</span><span><del>KRW 13,000</del></span><span>KRW 6,000</span>
+                        </div>
+                    </a>
+                    <a href="#">
+                        <div class="span">
+                        <span>서프곰 SET</span><span><del>KRW 18,000</del></span><span>KRW 14,000</span>
+                        </div>
+                    </a>
+                </div>
             </div>
-            <div class="thum">
-                <a href="#"><img src="./images/ddcb13f1d412cb7380962cb958c5001f.jpg" alt=""></a>
-                <a href="#"><img src="./images/e9fcc1db465f8b873e50da030ca4173b.jpg" alt=""></a>
-                <a href="#"><img src="./images/e972242b905ec3f9c8f769954cbe044f.jpg" alt=""></a>
-                <a href="#"><img src="./images/e9271454b957b70978116e1f42ca6e91.jpg" alt=""></a>
-                <a href="#"><img src="./images/d1ad693b0171c276cdddbece30e6768e.jpg" alt=""></a>
-                <a href="#"><img src="./images/d65321430c8e291c8e5982c7818e1dd2.jpg" alt=""></a>
+            <div class="tab4 tab">
+                <div class="big">
+                    <a href="#">
+                        <div class="span">
+                            <span>255 보라구마</span><span><del>KRW 25,000</del></span><span>7,000</span>
+                        </div>
+                    </a>
+                    <!-- <img src="./images/925e00e115701f52726bd4c38edee62c.jpg" alt=""> -->
+                </div>
+                <div class="thum">
+                    <a href="#">
+                        <div class="span">
+                            <span>[AIR PODS] 226 벌룬파자마</span><span><del>KRW 20,000</del></span><span>KRW 7,000</span>
+                        </div>
+                    </a>
+                    <a href="#">
+                        <div class="span">
+                            <span>[AIR PODS] 248 곰글링</span><span><del>KRW 18,000</del></span><span>KRW 6,000</span>
+                        </div>
+                    </a>
+                    <a href="#">
+                        <div class="span">
+                            <span>#S2 하트톡꽃받으숑</span><span><del>KRW 11,000</del></span><span>KRW 7,000</span>
+                        </div>
+                    </a>
+                    <a href="#">
+                        <div class="span">
+                            <span>KEY RING 228 새곰달곰</span><span><del>KRW 12,000</del></span><span>KRW 5,900</span>
+                        </div>
+                    </a>
+                    <a href="#">
+                        <div class="span">
+                            <span>SMART TOK 선셋베어(크림)</span><span><del>KRW 13,000</del></span><span>KRW 6,000</span>
+                        </div>
+                    </a>
+                    <a href="#">
+                        <div class="span">
+                        <span>서프곰 SET</span><span><del>KRW 18,000</del></span><span>KRW 14,000</span>
+                        </div>
+                    </a>
+                </div>
             </div>
-        </div>
-        <div class="tab1 tab">
-            <div class="big">
-                <img src="./images/925e00e115701f52726bd4c38edee62c.jpg" alt="">
+            <div class="tab5 tab">
+                <div class="big">
+                    <a href="#">
+                        <div class="span">
+                            <span>255 보라구마</span><span><del>KRW 25,000</del></span><span>7,000</span>
+                        </div>
+                    </a>
+                    <!-- <img src="./images/925e00e115701f52726bd4c38edee62c.jpg" alt=""> -->
+                </div>
+                <div class="thum">
+                    <a href="#">
+                        <div class="span">
+                            <span>[AIR PODS] 226 벌룬파자마</span><span><del>KRW 20,000</del></span><span>KRW 7,000</span>
+                        </div>
+                    </a>
+                    <a href="#">
+                        <div class="span">
+                            <span>[AIR PODS] 248 곰글링</span><span><del>KRW 18,000</del></span><span>KRW 6,000</span>
+                        </div>
+                    </a>
+                    <a href="#">
+                        <div class="span">
+                            <span>#S2 하트톡꽃받으숑</span><span><del>KRW 11,000</del></span><span>KRW 7,000</span>
+                        </div>
+                    </a>
+                    <a href="#">
+                        <div class="span">
+                            <span>KEY RING 228 새곰달곰</span><span><del>KRW 12,000</del></span><span>KRW 5,900</span>
+                        </div>
+                    </a>
+                    <a href="#">
+                        <div class="span">
+                            <span>SMART TOK 선셋베어(크림)</span><span><del>KRW 13,000</del></span><span>KRW 6,000</span>
+                        </div>
+                    </a>
+                    <a href="#">
+                        <div class="span">
+                        <span>서프곰 SET</span><span><del>KRW 18,000</del></span><span>KRW 14,000</span>
+                        </div>
+                    </a>
+                </div>
             </div>
-            <div class="thum">
-                <a href="#"><img src="./images/6813e0b4f67103a4b2fd930127e9e6a4.jpg" alt=""></a>
-                <a href="#"><img src="./images/8342a141fee8f450d8cf958c02fd4df4.jpg" alt=""></a>
-                <a href="#"><img src="./images/6813e0b4f67103a4b2fd930127e9e6a4.jpg" alt=""></a>
-                <a href="#"><img src="./images/55761ae82b4cad76d8a2bcd380edd3bd.jpg" alt=""></a>
-                <a href="#"><img src="./images/02725e76afedc00bcb27046d7cfee3c3.jpg" alt=""></a>
-                <a href="#"><img src="./images/d3da39478faf148e16cd38a73ec2ef69.jpg" alt=""></a>
+            <div class="tab6 tab">
+                <div class="big">
+                    <a href="#">
+                        <div class="span">
+                            <span>255 보라구마</span><span><del>KRW 25,000</del></span><span>7,000</span>
+                        </div>
+                    </a>
+                    <!-- <img src="./images/925e00e115701f52726bd4c38edee62c.jpg" alt=""> -->
+                </div>
+                <div class="thum">
+                    <a href="#">
+                        <div class="span">
+                            <span>[AIR PODS] 226 벌룬파자마</span><span><del>KRW 20,000</del></span><span>KRW 7,000</span>
+                        </div>
+                    </a>
+                    <a href="#">
+                        <div class="span">
+                            <span>[AIR PODS] 248 곰글링</span><span><del>KRW 18,000</del></span><span>KRW 6,000</span>
+                        </div>
+                    </a>
+                    <a href="#">
+                        <div class="span">
+                            <span>#S2 하트톡꽃받으숑</span><span><del>KRW 11,000</del></span><span>KRW 7,000</span>
+                        </div>
+                    </a>
+                    <a href="#">
+                        <div class="span">
+                            <span>KEY RING 228 새곰달곰</span><span><del>KRW 12,000</del></span><span>KRW 5,900</span>
+                        </div>
+                    </a>
+                    <a href="#">
+                        <div class="span">
+                            <span>SMART TOK 선셋베어(크림)</span><span><del>KRW 13,000</del></span><span>KRW 6,000</span>
+                        </div>
+                    </a>
+                    <a href="#">
+                        <div class="span">
+                        <span>서프곰 SET</span><span><del>KRW 18,000</del></span><span>KRW 14,000</span>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <div class="tab7 tab">
+                <div class="big">
+                    <a href="#">
+                        <div class="span">
+                            <span>255 보라구마</span><span><del>KRW 25,000</del></span><span>7,000</span>
+                        </div>
+                    </a>
+                    <!-- <img src="./images/925e00e115701f52726bd4c38edee62c.jpg" alt=""> -->
+                </div>
+                <div class="thum">
+                    <a href="#">
+                        <div class="span">
+                            <span>[AIR PODS] 226 벌룬파자마</span><span><del>KRW 20,000</del></span><span>KRW 7,000</span>
+                        </div>
+                    </a>
+                    <a href="#">
+                        <div class="span">
+                            <span>[AIR PODS] 248 곰글링</span><span><del>KRW 18,000</del></span><span>KRW 6,000</span>
+                        </div>
+                    </a>
+                    <a href="#">
+                        <div class="span">
+                            <span>#S2 하트톡꽃받으숑</span><span><del>KRW 11,000</del></span><span>KRW 7,000</span>
+                        </div>
+                    </a>
+                    <a href="#">
+                        <div class="span">
+                            <span>KEY RING 228 새곰달곰</span><span><del>KRW 12,000</del></span><span>KRW 5,900</span>
+                        </div>
+                    </a>
+                    <a href="#">
+                        <div class="span">
+                            <span>SMART TOK 선셋베어(크림)</span><span><del>KRW 13,000</del></span><span>KRW 6,000</span>
+                        </div>
+                    </a>
+                    <a href="#">
+                        <div class="span">
+                        <span>서프곰 SET</span><span><del>KRW 18,000</del></span><span>KRW 14,000</span>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <div class="tab8 tab">
+                <div class="big">
+                    <a href="#">
+                        <div class="span">
+                            <span>255 보라구마</span><span><del>KRW 25,000</del></span><span>7,000</span>
+                        </div>
+                    </a>
+                    <!-- <img src="./images/925e00e115701f52726bd4c38edee62c.jpg" alt=""> -->
+                </div>
+                <div class="thum">
+                    <a href="#">
+                        <div class="span">
+                            <span>[AIR PODS] 226 벌룬파자마</span><span><del>KRW 20,000</del></span><span>KRW 7,000</span>
+                        </div>
+                    </a>
+                    <a href="#">
+                        <div class="span">
+                            <span>[AIR PODS] 248 곰글링</span><span><del>KRW 18,000</del></span><span>KRW 6,000</span>
+                        </div>
+                    </a>
+                    <a href="#">
+                        <div class="span">
+                            <span>#S2 하트톡꽃받으숑</span><span><del>KRW 11,000</del></span><span>KRW 7,000</span>
+                        </div>
+                    </a>
+                    <a href="#">
+                        <div class="span">
+                            <span>KEY RING 228 새곰달곰</span><span><del>KRW 12,000</del></span><span>KRW 5,900</span>
+                        </div>
+                    </a>
+                    <a href="#">
+                        <div class="span">
+                            <span>SMART TOK 선셋베어(크림)</span><span><del>KRW 13,000</del></span><span>KRW 6,000</span>
+                        </div>
+                    </a>
+                    <a href="#">
+                        <div class="span">
+                        <span>서프곰 SET</span><span><del>KRW 18,000</del></span><span>KRW 14,000</span>
+                        </div>
+                    </a>
+                </div>
             </div>
         </div>
     </main>
